# string-cow

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompileOptions.cmake
src/libcsc/: string.hpp
src/libcsc/string/: CMakeLists.txt  string.cpp  string.hpp
test/libcsc/: CMakeLists.txt  string.cpp
